styling added and components updated

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,9 +8,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to left, #e66465, #9198e5);
+  /* background: linear-gradient(to left, #797198, #9198e5); */
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
